--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,13 @@
 /* Sidebar Styles */
 body{
-    /* background-color: #d1fcd7; */
-    background-image: url('../imgs/paddy.jpg');
+   
+  
     background-size: cover; /* Ensures the image covers the entire screen */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat
 }
 .sidebar {
-    background-color: #c6e7a6; /* Change this to your desired background color */
+    background-color: #6bf97b; /* Change this to your desired background color */
     color: #090909; /* Text color */
     height: 100vh; /* Full height */
     padding-top: 20px;
